final details in responsiveness

--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
     </div>
     <div id="contact" class="mt-5">
       <h2>📮 Contact me</h2>
-      <a href="mailto:[email]" class="email-link">
+      <a href="mailto:[email]" class="email-link" title="contact by email">
         nadine.leonor10@gmail.com
       </a>
     </div>
