--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nadine Antunes</title>
+    <meta
+      name="description"
+      content="Check out my portfolio in front-end development." />
+    <title>Nadine Antunes - Personal Portfolio</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous" />
 
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -27,8 +29,7 @@
           data-bs-target="#navbarNavAltMarkup"
           aria-controls="navbarNavAltMarkup"
           aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+          aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -47,16 +48,15 @@
       <a href="about.html#contact" class="contact-link">Contact me</a>
       <a href="about.html" class="about-link">About me</a>
     </div>
-    <div class="container mt-5">
+    <div class="container">
       <div class="row">
-        <div class="d-none d-sm-block col-6 mh-100">
+        <div class="d-none d-sm-block col-sm-6">
           <img
             src="images/yoga.png"
             alt="yoga"
-            class="img-fluid rounded align-self-center"
-          />
+            class="img-fluid rounded align-self-center" />
         </div>
-        <div class="d-sm-col-6">
+        <div class="col-12 col-sm-6 projects-desc">
           <h2 class="text-start mb-4">Yoga app</h2>
           <p class="text-start p-0">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -68,14 +68,13 @@
           <a
             href="#"
             type="button"
-            class="btn btn-md purple-button text-start ms-0"
-          >
+            class="btn btn-md purple-button text-start ms-0">
             Launch Yoga App
           </a>
         </div>
       </div>
       <div class="row mt-5">
-        <div class="d-md-col-12 d-sm-col-6">
+        <div class="col-12 col-sm-6 projects-desc">
           <h2 class="text-start mb-4">Weather app</h2>
           <p class="text-start p-0">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -87,28 +86,25 @@
           <a
             href="#"
             type="button"
-            class="btn btn-md purple-button text-start ms-0"
-          >
+            class="btn btn-md purple-button text-start ms-0">
             Launch Weather App
           </a>
         </div>
-        <div class="d-none d-sm-block-col-6 mh-100">
+        <div class="d-none d-sm-block col-sm-6">
           <img
             src="images/weather.png"
             alt="weather-app"
-            class="img-fluid rounded w-auto"
-          />
+            class="img-fluid rounded w-auto" />
         </div>
       </div>
       <div class="row mt-5">
-        <div class="d-none d-sm-block-col-6 mh-100">
+        <div class="d-none d-sm-block col-sm-6">
           <img
             src="images/yogurt.png"
             alt="yogurt"
-            class="img-fluid rounded w-auto"
-          />
+            class="img-fluid rounded w-auto" />
         </div>
-        <div class="d-md-col-12 d-sm-col-6">
+        <div class="col-12 col-sm-6 projects-desc">
           <h2 class="text-start mb-4">Yogurt app</h2>
           <p class="text-start p-0">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -120,8 +116,7 @@
           <a
             href="#"
             type="button"
-            class="btn btn-md purple-button text-start ms-0"
-          >
+            class="btn btn-md purple-button text-start ms-0">
             Launch Yogurt App
           </a>
         </div>
@@ -130,7 +125,6 @@
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"
       integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
   </body>
 </html>
